--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_alarm_clock: ^0.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
