--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_alarm_clock: ^0.0.1
+  flutter_local_notifications: ^5.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
