--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+assets:
+  - images/image1.jpg
+  - images/image2.jpg
+  - images/image3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
