--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,9 +64,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 assets:
-  - images/image1.jpg
-  - images/image2.jpg
-  - images/image3.jpg
+  - images/image1.png
+  - images/image2.png
+  - images/image3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
